--- a/src/pages/sample.module.scss
+++ b/src/pages/sample.module.scss
@@ -25,3 +25,11 @@
         padding: 2rem;
     }
 }
+
+.query {
+    font-size: 2rem;
+    font-weight: bold;
+    color: rgb(179, 179, 179);
+    padding: 3rem;
+    text-align: center;
+}
